# image-tools

./: .gitattributes  .gitignore  README.md  install-development-plugin.sh  main.lua
acrion_image_tools/: CMakeLists.txt  fits.cpp  fits.hpp  imagemagick.hpp  io.cpp  io.hpp  main.cpp  nexuslua_plugin.toml.template  test.cpp  version_acrion_image_tools.cpp  version_acrion_image_tools.hpp  version_acrion_image_tools_generated.hpp.cmake
acrion_image_tools/im/: PKGBUILD-arch-modified  PKGBUILD-arch.patch  PKGBUILD-mingw-modified  PKGBUILD-mingw.patch  build_msys2.sh  update-patch-files.sh
